[gd_scene load_steps=3 format=3 uid="uid://dhqs14owf00eo"]

[ext_resource type="Script" uid="uid://dchnnr1cryu6o" path="res://Scenes/MainMenu/settings.gd" id="1_r2fek"]
[ext_resource type="Theme" uid="uid://beq3sqokihu4k" path="res://Art/menu_theme.tres" id="2_28jca"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2fek")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_28jca")

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "SETTINGS"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "X (Esc)"

[node name="Volume" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 4
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Volume"]
layout_mode = 2

[node name="Resolutions" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Resolutions"]
layout_mode = 2
size_flags_vertical = 1
text = "Resolutions"

[node name="Resolutions" type="OptionButton" parent="MarginContainer/PanelContainer/VBoxContainer/Resolutions"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="FPS" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/FPS"]
layout_mode = 2
text = "FPS Limiter"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/VBoxContainer/FPS"]
layout_mode = 2
item_count = 4
popup/item_0/text = "Unlimited"
popup/item_0/id = 0
popup/item_1/text = "144FPS"
popup/item_1/id = 1
popup/item_2/text = "60FPS"
popup/item_2/id = 2
popup/item_3/text = "30FPS"
popup/item_3/id = 3

[node name="Mappings" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Mappings"]
layout_mode = 2
text = "Key Mappings"

[node name="Button Mappings" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/Mappings"]
layout_mode = 2

[node name="Sensitivity" type="HSplitContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/Sensitivity"]
layout_mode = 2
text = "Sensitivy"

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Sensitivity"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/Resolutions/Resolutions" to="." method="_on_resolutions_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/VBoxContainer/FPS/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/Mappings/Button Mappings" to="." method="_on_button_mappings_pressed"]
[connection signal="changed" from="MarginContainer/PanelContainer/VBoxContainer/Sensitivity/HSlider" to="." method="_on_h_slider_changed"]
